--- a/2.html
+++ b/2.html
@@ -1,7 +1,7 @@
 <!DOCTYPE html>
 <html>
     <head>
-        <title> Example 0</title>
+        <title> Page 2</title>
             <style>
         	h1{color:black;}
         	p{color:black;}
@@ -11,18 +11,29 @@
                 img.bottom {
                 vertical-align: text-bottom;
 }
+h8 {
+  min-width:200px;
+  max-width:500px;
+  text-align:center;
+  white-space: pre-line;
+}
             </style>
     </head>
     <body >
                <center><a href="3.html">
-  <img src="2.jpg" alt="HTML tutorial" style="width:700px;height:700px;border:0;">
+  <img src="2.jpg" alt="HTML tutorial" style="width:600px;height:600px;border:0;">
 </a></center>
 
+<font face="Courier New" color="black"><center><h8>"diamonds" / jpg images / oct 2017
+This is a combined image of a Tiffanys store and a Angolan diamond picking operation.
+The idea was to get two images and stack one to achieve a better horizon line.
+The color of the sky and tones of the store made a good match with what I was working with.
+</h8></center>
 
 <h1 align="left">sitemap</h1>
      <p style="text-align:left">
     <a href="main.html">1</a> 
-    <a href="3.html">3</a>
+    <a href="3.html">3</a></font>
 </p>
     </body>
 </html>
