--- a/main.html
+++ b/main.html
@@ -1,7 +1,7 @@
 <!DOCTYPE html>
 <html>
     <head>
-        <title> Example 0</title>
+        <title> Project 5</title>
             <style>
         	h1{color:black;}
         	p{color:black;}
@@ -11,17 +11,28 @@
                 img.bottom {
                 vertical-align: text-bottom;
 }
+h8 {
+  min-width:200px;
+  max-width:500px;
+  text-align:center;
+  white-space: pre-line;
+}
             </style>
     </head>
-    <body >
+    <body , >
                <center><a href="2.html">
-  <img src="malcolm.jpg" alt="HTML tutorial" style="width:700px;height:700px;border:0;">
+  <img src="malcolm.jpg" alt="HTML tutorial" style="width:600px;height:600px;border:0;">
 </a></center>
+
+<font face="Courier New" color="black"><center><h8>"1947" / jpg images / oct 2017
+I wanted to recreate a image of Malcolm X and his run with the police in 1947.
+Incorporating the artist elements of his time was something I had kept in mind.
+The relationship between the comics character and the subject at matter.</h8></center>
 
 <h1 align="left">sitemap</h1>
      <p style="text-align:left">
     <a href="2.html">2</a> 
-    <a href="3.html">3</a>
+    <a href="3.html">3</a></font>
 </p>
     </body>
 </html>
