--- a/3.html
+++ b/3.html
@@ -25,9 +25,8 @@ h8 {
 </a></center>
 
 <font face="Courier New" color="black"><center><h8>"power" / jpg images / oct 2017
-This is a combined image of a Tiffanys store and a Angolan diamond picking operation.
-The idea was to get two images and stack one to achieve a better horizon line.
-The color of the sky and tones of the store made a good match with what I was working with.
+This is showing two cheetahs in black and white. 
+I wanted to display the cheetah in two modes.
 </h8></center>
 
 <h1 align="left">sitemap</h1>
