--- a/3.html
+++ b/3.html
@@ -20,19 +20,22 @@ h8 {
             </style>
     </head>
     <body >
-               <center><a href="main.html">
+               <center><a href="4.html">
   <img src="3.jpg" alt="HTML tutorial" style="width:600px;height:600px;border:0;">
 </a></center>
 
 <font face="Courier New" color="black"><center><h8>"power" / jpg images / oct 2017
 This is showing two cheetahs in black and white. 
-I wanted to display the cheetah in two modes.
+I wanted to display the cheetah in two modes while appearing to come from 1 body
+the line represents the speed and duality of the cheetah
 </h8></center>
 
 <h1 align="left">sitemap</h1>
      <p style="text-align:left">
     <a href="main.html">1</a> 
-    <a href="2.html">2</a></font>
+    <a href="2.html">2</a>
+    <a href="4.html">4</a>
+    <a href="5.html">5</a></font>
 </p>
     </body>
 </html>
