--- a/5.html
+++ b/5.html
@@ -20,22 +20,22 @@ h8 {
             </style>
     </head>
     <body >
-               <center><a href="3.html">
-  <img src="4.jpg" alt="HTML tutorial" style="width:600px;height:600px;border:0;">
+               <center><a href="main.html">
+  <img src="6.jpg" alt="HTML tutorial" style="width:600px;height:600px;border:0;">
 </a></center>
 
-<font face="Courier New" color="black"><center><h8>"history" / jpg images / oct 2017
-A black power symbol of the 1960's that was redone in adobe illustrator.
-I infused a famous picture of an African american slave within the symbol.
-The man is just one of many components within the meaning of the symbol.
+<font face="Courier New" color="black"><center><h8>"submissively dominant man" / jpg images / oct 2017
+a simple image of the same person in two different suits. 
+This image is to show 2 sides of the same man.
+The face is from the same person, with 2 different outfits adjusted to look equal.
 </h8></center>
 
 <h1 align="left">sitemap</h1>
      <p style="text-align:left">
-    <a href="main.html">1</a> 
+    <a href="main.html">1</a>
+    <a href="2.html">2</a> 
     <a href="3.html">3</a>   
-    <a href="4.html">4</a>
-    <a href="5.html">5</a></font>
+    <a href="4.html">4</a></font>
 </p>
     </body>
 </html>
