--- a/main.html
+++ b/main.html
@@ -24,15 +24,17 @@ h8 {
   <img src="malcolm.jpg" alt="HTML tutorial" style="width:600px;height:600px;border:0;">
 </a></center>
 
-<font face="Courier New" color="black"><center><h8>"1947" / jpg images / oct 2017
-I wanted to recreate a image of Malcolm X and his run with the police in 1947.
+<font face="Courier New" color="black"><center><h8>"1944" / jpg images / oct 2017
+I wanted to recreate a image of Malcolm X and his run with the police in 1944.
 Incorporating the artist elements of his time was something I had kept in mind.
 The relationship between the comics character and the subject at matter.</h8></center>
 
 <h1 align="left">sitemap</h1>
      <p style="text-align:left">
     <a href="2.html">2</a> 
-    <a href="3.html">3</a></font>
+    <a href="3.html">3</a>
+    <a href="4.html">4</a>
+    <a href="5.html">5</a> </font>
 </p>
     </body>
 </html>
