--- a/3.html
+++ b/3.html
@@ -35,7 +35,8 @@ the line represents the speed and duality of the cheetah
     <a href="main.html">1</a> 
     <a href="2.html">2</a>
     <a href="4.html">4</a>
-    <a href="5.html">5</a></font>
+    <a href="5.html">5</a>
+    <a href="6.html">6</a></font>
 </p>
     </body>
 </html>
