--- a/2.html
+++ b/2.html
@@ -35,7 +35,8 @@ The man is just one of many components within the meaning of the symbol.
     <a href="main.html">1</a> 
     <a href="3.html">3</a>   
     <a href="4.html">4</a>
-    <a href="5.html">5</a></font>
+    <a href="5.html">5</a>
+    <a href="6.html">6</a></font>
 </p>
     </body>
 </html>
