--- a/4.html
+++ b/4.html
@@ -35,7 +35,8 @@ Did the world take too much from Trenton?
     <a href="main.html">1</a> 
     <a href="2.html">2</a> 
     <a href="3.html">3</a>
-    <a href="5.html">5</a></font>
+    <a href="5.html">5</a>
+    <a href="6.html">6</a></font>
 </p>
     </body>
 </html>
