--- a/6.html
+++ b/6.html
@@ -20,14 +20,14 @@ h8 {
             </style>
     </head>
     <body >
-               <center><a href="6.html">
-  <img src="6.jpg" alt="HTML tutorial" style="width:600px;height:600px;border:0;">
+               <center><a href="main.html">
+  <img src="7.jpg" alt="HTML tutorial" style="width:600px;height:600px;border:0;">
 </a></center>
 
-<font face="Courier New" color="black"><center><h8>"submissively dominant man" / jpg images / oct 2017
-a simple image of the same person in two different suits. 
-This image is to show 2 sides of the same man.
-This man obeys all orders.
+<font face="Courier New" color="black"><center><h8>"love" / jpg images / oct 2017
+a pixelated sex scene
+This image shows a black male making love to a blonde female
+inspired by Kanye Wests - "My Beautiful Dark Twisted Fantasy" album cover
 </h8></center>
 
 <h1 align="left">sitemap</h1>
@@ -36,7 +36,7 @@ This man obeys all orders.
     <a href="2.html">2</a> 
     <a href="3.html">3</a>   
     <a href="4.html">4</a>
-    <a href="6.html">6</a></font>
+    <a href="5.html">5</a></font>
 </p>
     </body>
 </html>
