--- a/main.html
+++ b/main.html
@@ -26,7 +26,7 @@ h8 {
 
 <font face="Courier New" color="black"><center><h8>"1944" / jpg images / oct 2017
 I wanted to recreate a image of Malcolm X and his run with the police in 1944.
-Incorporating the artist elements of his time was something I had kept in mind.
+Incorporating art elements of his time was something I had kept in mind.
 The relationship between the comics character and the subject at matter.</h8></center>
 
 <h1 align="left">sitemap</h1>
@@ -34,7 +34,8 @@ The relationship between the comics character and the subject at matter.</h8></c
     <a href="2.html">2</a> 
     <a href="3.html">3</a>
     <a href="4.html">4</a>
-    <a href="5.html">5</a> </font>
+    <a href="5.html">5</a>
+    <a href="6.html">6</a> </font>
 </p>
     </body>
 </html>
