--- a/6v2.html
+++ b/6v2.html
@@ -20,13 +20,13 @@ h8 {
             </style>
     </head>
     <body >
-               <center><a href="6v2.html">
-  <img src="7.jpg" alt="HTML tutorial" style="width:600px;height:600px;border:0;">
+               <center><a href="6.html">
+  <img src="6v2.jpg" alt="HTML tutorial" style="width:600px;height:600px;border:0;">
 </a></center>
 
 <font face="Courier New" color="black"><center><h8>"love" / jpg images / oct 2017
-a pixelated sex scene
-This image shows a black male making love to a blonde female
+a pixelated sex scene version 2
+This image shows a black male making love to a female
 inspired by Kanye Wests - "My Beautiful Dark Twisted Fantasy" album cover
 </h8></center>
 
