--- a/6.html
+++ b/6.html
@@ -26,7 +26,7 @@ h8 {
 
 <font face="Courier New" color="black"><center><h8>"love" / jpg images / oct 2017
 a pixelated sex scene
-This image shows a black male making love to a blonde female
+This image shows a man making love to a blonde female
 inspired by Kanye Wests - "My Beautiful Dark Twisted Fantasy" album cover
 </h8></center>
 
