--- a/6v2.html
+++ b/6v2.html
@@ -26,7 +26,7 @@ h8 {
 
 <font face="Courier New" color="black"><center><h8>"love" / jpg images / oct 2017
 a pixelated sex scene version 2
-This image shows a black male making love to a female
+This image shows a man making love to a female
 inspired by Kanye Wests - "My Beautiful Dark Twisted Fantasy" album cover
 </h8></center>
 
