--- a/3.html
+++ b/3.html
@@ -26,8 +26,8 @@ h8 {
 
 <font face="Courier New" color="black"><center><h8>"power" / jpg images / oct 2017
 This is showing two cheetahs in black and white. 
-I wanted to display the cheetah in two modes while appearing to come from 1 body
-the line represents the speed and duality of the cheetah
+I wanted to display the cheetah in two modes while appearing to come from 1 body.
+the line represents the speed and duality of the cheetah.
 </h8></center>
 
 <h1 align="left">sitemap</h1>
