--- a/5.html
+++ b/5.html
@@ -24,11 +24,11 @@ h8 {
   <img src="6.jpg" alt="HTML tutorial" style="width:600px;height:600px;border:0;">
 </a></center>
 
-<font face="Courier New" color="black"><center><h8>"submissively dominant man" / jpg images / oct 2017
+<center><font face="Courier New" color="black"><left><h8>"submissively dominant man" / jpg images / oct 2017
 a simple image of the same person in two different suits. 
 This image is to show 2 sides of the same man.
 This man obeys all orders.
-</h8></center>
+</h8></left></center>
 
 <h1 align="left">sitemap</h1>
      <p style="text-align:left">
