--- a/4.html
+++ b/4.html
@@ -26,7 +26,7 @@ h8 {
 
 <font face="Courier New" color="black"><center><h8>"trenton, nj" / jpg images / oct 2017
 Trenton was a thriving city that is now filled with inner city tantrums. 
-incorporating the irony of their motto.
+Incorporating the irony of their motto.
 Did the world take too much?
 </h8></center>
 
