--- a/2.html
+++ b/2.html
@@ -27,7 +27,7 @@ h8 {
 <font face="Courier New" color="black"><center><h8>"slave power" / jpg images / oct 2017
 A black power symbol of the 1960's that was redone in adobe illustrator.
 I wanted to give the fist the original meaning named by Fredrick Douglas for Slave Power.
-The revealed body scars are medical pictures of Gordon the runaway slave.
+I got the picture of the scars from a medical photograph of Gordon the runaway slave.
 </h8></center>
 
 <h1 align="left">sitemap</h1>
