--- a/2.html
+++ b/2.html
@@ -24,9 +24,9 @@ h8 {
   <img src="4.jpg" alt="HTML tutorial" style="width:600px;height:600px;border:0;">
 </a></center>
 
-<font face="Courier New" color="black"><center><h8>"slave power" / jpg images / oct 2017
+<font face="Courier New" color="black"><center><h8>"fist" / jpg images / oct 2017
 A black power symbol of the 1960's that was redone in adobe illustrator.
-I wanted to give the fist the original meaning named by Fredrick Douglas for Slave Power.
+I wanted to give the fist, the original meaning named by Fredrick Douglas for Slave Power.
 - medical photograph of Gordon the runaway slave.
 </h8></center>
 
