--- a/main.html
+++ b/main.html
@@ -31,6 +31,7 @@ The relationship between the comics character and the subject at matter.</h8></c
 
 <h1 align="left">sitemap</h1>
      <p style="text-align:left">
+    <a href="about.html">about</a>    
     <a href="2.html">2</a> 
     <a href="3.html">3</a>
     <a href="4.html">4</a>
