--- a/about.html
+++ b/about.html
@@ -20,7 +20,7 @@ h8 {
             </style>
     </head>
     <body >
-               <center><a href="">
+               <center><a href="main.html">
   <img src="7.jpg" alt="HTML tutorial" style="width:600px;height:600px;border:0;">
 </a></center>
 
