--- a/about.html
+++ b/about.html
@@ -31,7 +31,7 @@ This project is the bare bones of my online website and portfolio. Titled: mothe
 
 <h1 align="left">sitemap</h1>
      <p style="text-align:left">
-    <a href="main.html">1</a>
+    <a href="main.html">home</a>
     <a href="2.html">2</a> 
     <a href="3.html">3</a>   
     <a href="4.html">4</a>
