--- a/index.html
+++ b/index.html
@@ -1,11 +1,42 @@
 <!DOCTYPE html>
 <html>
-  <head>
-    <meta charset="utf-8">
-    <title>(Your Name)</title>
-  </head>
-  <body>
-    <h1>Hello World -- This is my website!</h1>
-    <p>I'm making this to host my portfolio for free.</p>
-  </body>
+    <head>
+        <title> Project 5</title>
+            <style>
+        	h1{color:black;}
+        	p{color:black;}
+                img.top {
+                vertical-align: text-top;
+}
+                img.bottom {
+                vertical-align: text-bottom;
+}
+h8 {
+  min-width:200px;
+  max-width:500px;
+  text-align:center;
+  white-space: pre-line;
+}
+            </style>
+    </head>
+    <body , >
+               <center><a href="2.html">
+  <img src="malcolm.jpg" alt="HTML tutorial" style="width:600px;height:600px;border:0;">
+</a></center>
+
+<font face="Courier New" color="black"><center><h8>"1944" / jpg images / oct 2017
+I wanted to recreate a image of Malcolm X and his run with the police in 1944.
+Incorporating art elements of his time was something I had kept in mind.
+The relationship between the comics character and the subject at matter.</h8></center>
+
+<h1 align="left">sitemap</h1>
+     <p style="text-align:left">
+    <a href="about.html">about</a>    
+    <a href="2.html">2</a> 
+    <a href="3.html">3</a>
+    <a href="4.html">4</a>
+    <a href="5.html">5</a>
+    <a href="6.html">6</a> </font>
+</p>
+    </body>
 </html>
