--- a/index.html
+++ b/index.html
@@ -1,42 +1,50 @@
+
+
+
 <!DOCTYPE html>
 <html>
-    <head>
-        <title> Project 5</title>
-            <style>
-        	h1{color:black;}
-        	p{color:black;}
-                img.top {
-                vertical-align: text-top;
-}
-                img.bottom {
-                vertical-align: text-bottom;
-}
-h8 {
-  min-width:200px;
-  max-width:500px;
-  text-align:center;
-  white-space: pre-line;
-}
-            </style>
-    </head>
-    <body , >
-               <center><a href="2.html">
-  <img src="malcolm.jpg" alt="HTML tutorial" style="width:600px;height:600px;border:0;">
-</a></center>
 
-<font face="Courier New" color="black"><center><h8>"1944" / jpg images / oct 2017
-I wanted to recreate a image of Malcolm X and his run with the police in 1944.
-Incorporating art elements of his time was something I had kept in mind.
-The relationship between the comics character and the subject at matter.</h8></center>
+<head>
+    <meta charset="utf-8">
+    <link rel="stylesheet" type="text/css" href="css/style.css"> <!-- link to style sheet  -->
+    <title>home</title>
 
-<h1 align="left">sitemap</h1>
-     <p style="text-align:left">
-    <a href="about.html">about</a>    
-    <a href="2.html">2</a> 
-    <a href="3.html">3</a>
-    <a href="4.html">4</a>
-    <a href="5.html">5</a>
-    <a href="6.html">6</a> </font>
-</p>
-    </body>
+</head> 
+<body>
+  <header><center>
+  	   <!-- You can add links to the navigation menu below (link already added to Artist Statement) -->
+   <title>W3.CSS</title>
+<meta name="viewport" content="width=device-width, initial-scale=1">
+<link rel="stylesheet" href="https://www.w3schools.com/w3css/4/w3.css">
+<body>
+<div class="w1-container">
+
+<h2>dan balducci</h2>
+<div class="w1-bar w2-black">
+  <a href="main.html" class="w3-bar-item w3-button">home</a>
+  <a href="portfolio.html" class="w3-bar-item w3-button">portfolio</a>
+  <a href="contact.html" class="w3-bar-item w3-button">contact</a>
+</div></center>
+  </header>
+  
+  <div id="main">  <!-- divs are like sections of the page.  You can apply different CSS styles to different sections -->
+  
+    <div class="about">
+       <div style="text-align: center; margin-left: 20%; margin-right: 20%">
+              <div style="display: inline-block; text-align: left;">
+        <p><b>About me: </b> </p>
+        Digital media to me represents the freedom of expression in so many different possible ways. 
+        From the time I picked up my first camera, to editing my first video, I always loved the process of assembling and representing the subjects.
+        My roots are embedded in skateboarding, and it gave me the drive to creativly advance within my processes to think and create.
+        Early digital media interests derived from seeing so many digitally advanced technology as I was growing up in Japan. When I moved to the United States, I felt like I was in a new world surrounded by new designs, layouts, and life. I soon discovered my love for Art and digitally created media, I then soon found myself endowing in Digital media arts. It was the moment I decided to ask my mother for her camera so I can document my friends skateboarding, that would change everything i've come to known.</div></div>
+
+
+
+
+
+
+     </div>
+  	<footer>
+  	</footer>
+</body>  
 </html>
