--- a/index.html
+++ b/index.html
@@ -21,9 +21,9 @@
 
 <h2>dan balducci</h2>
 <div class="w1-bar w2-black">
-  <a href="main.html" class="w3-bar-item w3-button">home</a>
-  <a href="portfolio.html" class="w3-bar-item w3-button">portfolio</a>
-  <a href="contact.html" class="w3-bar-item w3-button">contact</a>
+  <a href="index.html" class="w3-bar-item w3-button">home</a>
+  <a href="index.html" class="w3-bar-item w3-button">portfolio</a>
+  <a href="index.html" class="w3-bar-item w3-button">contact</a>
 </div></center>
   </header>
   
