--- a/index.html
+++ b/index.html
@@ -1,6 +1,3 @@
-
-
-
 <!DOCTYPE html>
 <html>
 
@@ -21,7 +18,7 @@
 
 <h2>dan balducci</h2>
 <div class="w1-bar w2-black">
-  <a href="index.html" class="w3-bar-item w3-button">home</a>
+  <a href="index.html" class="w3-bar-item w3-button">jig</a>
   <a href="index.html" class="w3-bar-item w3-button">portfolio</a>
   <a href="index.html" class="w3-bar-item w3-button">contact</a>
 </div></center>
