--- a/index.html
+++ b/index.html
@@ -18,7 +18,7 @@
 
 <h2>dan balducci</h2>
 <div class="w1-bar w2-black">
-  <a href="mine.html" class="w3-bar-item w3-button">jig</a>
+  <a href="hi.html" class="w3-bar-item w3-button">jig</a>
   <a href="index.html" class="w3-bar-item w3-button">portfolio</a>
   <a href="index.html" class="w3-bar-item w3-button">contact</a>
 </div></center>
