--- a/about.html
+++ b/about.html
@@ -1,41 +1,17 @@
 <!DOCTYPE html>
 <html>
-    <head>
-        <title> Page 2</title>
-            <style>
-        	h1{color:black;}
-        	p{color:black;}
-                img.top {
-                vertical-align: text-top;
-}
-                img.bottom {
-                vertical-align: text-bottom;
-}
-h8 {
-  min-width:200px;
-  max-width:500px;
-  text-align:center;
-  white-space: pre-line;
-}
-            </style>
-    </head>
-    <body >
-               <center><a href="main.html">
-  <img src="7.jpg" alt="HTML tutorial" style="width:600px;height:600px;border:0;">
-</a></center>
-
-<font face="Courier New" color="black"><center><h8>
-
-This project is the bare bones of my online website and portfolio. Titled: mother, is the inspiration of all ideas from the Net Art project in collaboration with my thoughts. I had a lot of ideas looking at telepresence, black-net0art-actions, Rent a negro in particular. i decided to use elements and themes of both in mind, capturing mostly expression on the faces. The artwork in each page was created using a combination of illustrator and photoshop. I decided to adapt a little bit of every kind of art but to focus more on old and current subjects. 
-</h8></center>
-
-<h1 align="left">sitemap</h1>
-     <p style="text-align:left">
-    <a href="main.html">home</a>
-    <a href="2.html">2</a> 
-    <a href="3.html">3</a>   
-    <a href="4.html">4</a>
-    <a href="5.html">5</a></font>
-</p>
-    </body>
+<head>
+	<meta charset="UTF-8">
+	<meta http-equiv="X-UA-Compatible" content="IE=edge">
+	<meta name="viewport" content="width=device-width, initial-scale=1">
+	<title>p5-example</title>
+	<link rel="stylesheet" type="text/css" href="main.css">
+	<script src="libraries/p5.js"></script>
+	<script src="libraries/p5.dom.js"></script>
+	<script src="libraries/p5.sound.js"></script>
+	<script src="sketch.js"></script>
+</head>
+<body>
+	<h1>p5.js blank example</h1>
+	<p>d</body>
 </html>
