--- a/index.html
+++ b/index.html
@@ -1,47 +1,19 @@
 <!DOCTYPE html>
 <html>
-
 <head>
-    <meta charset="utf-8">
-    <link rel="stylesheet" type="text/css" href="css/style.css"> <!-- link to style sheet  -->
-    <title>home</title>
-
+	<meta charset="UTF-8">
+	<meta http-equiv="X-UA-Compatible" content="IE=edge">
+	<meta name="viewport" content="width=device-width, initial-scale=1">
+	<title>p5-example</title>
+	<link rel="stylesheet" type="text/css" href="main.css">
+	<script src="libraries/p5.js"></script>
+	<script src="libraries/p5.dom.js"></script>
+	<script src="libraries/p5.sound.js"></script>
+	<script src="sketch.js"></script>
 </head>
 <body>
-  <header><center>
-  	   <!-- You can add links to the navigation menu below (link already added to Artist Statement) -->
-   <title>W3.CSS</title>
-<meta name="viewport" content="width=device-width, initial-scale=1">
-<link rel="stylesheet" href="https://www.w3schools.com/w3css/4/w3.css">
-<body>
-<div class="w1-container">
-
-<h2>dan balducci</h2>
-<div class="w1-bar w2-black">
-  <a href="hi.html" class="w3-bar-item w3-button">jig</a>
-  <a href="index.html" class="w3-bar-item w3-button">portfolio</a>
-  <a href="index.html" class="w3-bar-item w3-button">contact</a>
-</div></center>
-  </header>
-
-  <div id="main">  <!-- divs are like sections of the page.  You can apply different CSS styles to different sections -->
-
-    <div class="about">
-       <div style="text-align: center; margin-left: 20%; margin-right: 20%">
-              <div style="display: inline-block; text-align: left;">
-        <p><b>About me: </b> </p>
-        Digital media to me represents the freedom of expression in so many different possible ways.
-        From the time I picked up my first camera, to editing my first video, I always loved the process of assembling and representing the subjects.
-        My roots are embedded in skateboarding, and it gave me the drive to creativly advance within my processes to think and create.
-        Early digital media interests derived from seeing so many digitally advanced technology as I was growing up in Japan. When I moved to the United States, I felt like I was in a new world surrounded by new designs, layouts, and life. I soon discovered my love for Art and digitally created media, I then soon found myself endowing in Digital media arts. It was the moment I decided to ask my mother for her camera so I can document my friends skateboarding, that would change everything i've come to known.</div></div>
-
-
-
-
-
-
-     </div>
-  	<footer>
-  	</footer>
-</body>
+	<h4>Digital Mirror by Daniel Balducci</h4>
+	<h6>move mouse left or right for different colors / click mouse to expand</h6>
+	<h6>This piece allows the person to come up with different ways of reflecting/surveilling yourself</h6>
+	<p></body>
 </html>
